# metaCpp

./: CMakeLists.txt  reset_make.sh
src/: attribut.cpp  attribut.hpp  class.cpp  class.hpp  main.cpp  meta_class.cpp  meta_class.hpp  method.cpp  method.hpp
tests/: attribut_tests.inl  main.cpp  method_tests.inl
